cmake_minimum_required(VERSION 3.27)
project(stl_examples)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(minimal-example minimalExample.cpp)
add_executable(example1 example1.cpp)
add_executable(example2 example2.cpp)
add_executable(example3 example3.cpp)
add_executable(example4 example4.cpp)
add_executable(example5 example5.cpp)
add_executable(example6 example6.cpp)
add_executable(example7 example7.cpp)
add_executable(example8 example8.cpp)
add_executable(example9 example9.cpp)
add_executable(example10 example10.cpp)
add_executable(example11 example11.cpp)
add_executable(example12 example12.cpp)
add_executable(example13 example13.cpp)